Figured out client component bug. Wrapped up some strings

--- a/src/components/window.module.css
+++ b/src/components/window.module.css
@@ -3,8 +3,6 @@
   position: absolute;
   text-align: left;
   border: 2px solid #d3d3d3;
-  width: 500px;
-  height: 300px;
   overflow: hidden;
   resize: both;
   display:flex;
